# aico

./: .gitignore  DEBUG_EMO.md  DEDUPLICATION_TEST_INSTRUCTIONS.md  FRONTEND_MIGRATION_COMPLETED.md  FRONTEND_MIGRATION_GUIDE.md  IMPLEMENTATION_NOTES_conversation_persistence.md  LANGUAGE_DETECTION_IMPLEMENTATION.md  LICENSE  LICENSE-THIRD-PARTY.md  NOTICE  PHASE1_COMPLETE.md  PHASE1_TESTING.md  PHASE2_COMPLETE.md  README.md  REFACTOR_DOCS.MD  SCIENTIFIC_ASSESSMENT.md  TTS_DUAL_ENGINE_SETUP.md  TTS_IMPLEMENTATION_COMPLETE.md  TTS_MIGRATION_PLAN.md  TTS_PHASE4_IMPLEMENTATION.md  TTS_STT_INTEGRATION_SUMMARY.md  VERSIONS  WIP_FIX_memory_system.md  WIP_KG_CONSOLIDATION_FIX.md  WIP_KG_IMPLEMENTATION_REVIEW.md  WIP_KG_OPTIMIZATIONS.md  WIP_KG_QUALITY_IMPROVEMENTS.md  WIP_KG_ROOT_CAUSE.md  WIP_KG_STARTUP_CHECKLIST.md  WIP_KG_TIMEOUT_FIX.md  WIP_ams-completion-summary.md  WIP_ams-database-migrations.md  WIP_ams-directory-structure.md  WIP_ams-implementation-summary.md  WIP_ams-integration-checklist.md  WIP_ams-phase1-progress.md  WIP_ams_future_improvements.md  WIP_ams_phase1.5_COMPLETE.md  WIP_ams_phase1.5_summary.md  WIP_ams_roadmap.md  (+85 more)
backend/: .gitignore  log_consumer.py  main.py  main_old.py  message_bus_host.py  pyproject.toml  requirements.txt  server.py  test_auth.py  test_session_endpoint.py
backend/api/: __init__.py  dependencies.py
backend/api/admin/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py
backend/api/behavioral/: __init__.py  router.py  schemas.py
backend/api/conversation/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py
backend/api/echo/: __init__.py  router.py
backend/api/emotion/: __init__.py  dependencies.py  router.py  schemas.py
backend/api/handshake/: __init__.py  router.py
backend/api/health/: __init__.py  router.py  schemas.py
backend/api/kg/: __init__.py  dependencies.py  router.py  schemas.py
backend/api/logs/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py
backend/api/memory_album/: __init__.py  router.py  schemas.py
backend/api/scheduler/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py
backend/api/tts/: router.py  schemas.py
backend/api/users/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py
backend/api_gateway/: REFACTOR_2_SUMMARY.md  REFACTOR_SUMMARY.md  __init__.py  gateway_v2.py  test_refactor.py
backend/api_gateway/adapters/: base.py  rest_adapter.py  rest_adapter_v2.py  user_endpoints.py  websocket_adapter.py  websocket_adapter_v2.py  zeromq_adapter.py  zeromq_adapter_v2.py
backend/api_gateway/admin/: endpoints.py
backend/api_gateway/core/: auth.py  gateway.py  gateway_core.py  message_router.py  plugin_registry.py  protocol_manager.py  transport.py
backend/api_gateway/middleware/: __init__.py  encryption.py  rate_limiter.py  request_logging.py  security.py  validator.py
backend/api_gateway/models/: __init__.py  session.py
backend/api_gateway/models/core/: auth.py  gateway.py  message_router.py  transport.py  user_service.py
backend/api_gateway/plugins/: __init__.py  encryption_plugin.py  log_consumer_plugin.py  message_bus_plugin.py  rate_limiting_plugin.py  routing_plugin.py  security_plugin.py  validation_plugin.py
backend/core/: __init__.py  ai_plugin_base.py  lifecycle_manager.py  plugin_base.py  service_container.py
backend/scheduler/: __init__.py  core.py  cron.py  storage.py
backend/scheduler/tasks/: __init__.py  ams_consolidation.py  ams_feedback_classification.py  ams_thompson_sampling.py  ams_trajectory_cleanup.py  base.py  kg_consolidation.py  lmdb_cleanup.py  maintenance.py
backend/scheduler/tasks/user/: __init__.py
backend/services/: __init__.py  advanced_thread_manager.py  agency_engine.py  conversation_engine.py  conversational_context.py  embodiment_engine.py  emotion_engine.py  log_consumer_service.py  modelservice_client.py  personality_engine.py  thread_manager.py  thread_manager_integration.py
backend/tests/: __init__.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: __init__.py  test_auth_dependency.py  test_full_auth_cycle.py
backend/tests/unit/: __init__.py
cli/: .gitignore  None  None.salt  __version__.py  aico.db.salt  aico.py  aico.spec  aico_main.py  pyproject.toml  requirements.txt
cli/commands/: bus.py  chroma.py  config.py  database.py  dev.py  emotion.py  gateway.py  kg.py  lmdb.py  logs.py  modelservice.py  ollama.py  scheduler.py  security.py  version.py
cli/decorators/: __init__.py  sensitive.py
cli/utils/: __init__.py  api_client.py  chroma_utils.py  formatting.py  help_formatter.py  lmdb_utils.py  logging.py  path_display.py  platform.py  timezone.py  zmq_client.py
shared/: .gitignore  pyproject.toml  requirements.txt  setup.py
shared/aico/: __init__.py  __version__.py
shared/aico/ai/: __init__.py  base.py  coordination.py  processors.py
shared/aico/ai/analysis/: __init__.py  conversation_processor.py  example_usage.py  fact_extractor.py  intent_classifier.py
shared/aico/ai/knowledge_graph/: __init__.py  analytics.py  entity_resolution.py  extractor.py  fusion.py  graph_traversal.py  models.py  modelservice_client.py  storage.py
shared/aico/ai/memory/: __init__.py  bm25.py  consolidation.py  context.py  episodic.py  facts.py  fusion.py  manager.py  memory_album.py  (+5 more)
shared/aico/core/: __init__.py  authorization.py  bus.py  config.py  logging.py  logging_context.py  paths.py  process.py  topics.py  version.py
shared/aico/data/: __init__.py
shared/aico/feedback/: events.py  types.py
shared/aico/proto/: __init__.py  aico_conversation_pb2.py  aico_core_api_gateway_pb2.py  aico_core_common_pb2.py  aico_core_envelope_pb2.py  aico_core_logging_pb2.py  aico_core_plugin_system_pb2.py  aico_core_update_system_pb2.py  aico_emotion_pb2.py  aico_integration_pb2.py  aico_modelservice_pb2.py  aico_personality_pb2.py  aico_state_streaming_pb2.py  aico_ui_pb2.py
shared/aico/security/: __init__.py  encrypted_file.py  examples.py  exceptions.py  file_crypto.py  key_manager.py  service_auth.py  session_service.py  transport.py
(+813 files in other folders)
