[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aico"
version = "1.0.0"
description = "AICO - AI Companion Project (Unified Product Version)"
requires-python = ">=3.13"
license = {text = "MIT"}

# Core dependencies from the 'shared' module
dependencies = [
    "cryptography",
    "keyring",
    "libsql-client>=0.3.1",
    "pyyaml",
    "jsonschema",
    "watchdog",
    "pyzmq>=27.0.1",
    "protobuf>=6.32.0,<7.0.0",
    "platformdirs>=4.0.0",
    "psutil>=6.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "libsql>=0.1.8",
    "uvicorn>=0.35.0",
    "pynacl>=1.5.0",
    "lmdb>=1.7.3",
    "chromadb>=1.0.16", # Phase 2 semantic memory - core functionality
    "grand-cypher", # GQL/Cypher query language support for knowledge graph
    "hnswlib", # HNSW approximate nearest neighbor search for entity resolution
    "fast-langdetect>=0.2.1", # Ultra-fast language detection (80x faster, 95% accuracy, 217 languages)
]

[project.optional-dependencies]
backend = [
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "libsql==0.1.8",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]

cli = [
    "typer>=0.12.3,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "requests>=2.31.0,<3.0.0",
    "cron-descriptor>=1.4.3",
]

modelservice = [
    "transformers==4.50.3", # Fixed version compatible with GLiNER 0.2.22
    "torch>=1.12.0", # Required by transformers for model inference
    "gliner==0.2.22", # Advanced entity extraction (requires transformers <=4.51.0)
    "sentence-transformers>=5.1.1", # Multilingual embeddings for semantic memory
    "coqui-tts", # Source specified in tool.uv.sources, dependencies overridden
    "piper-tts>=1.2.0", # Fast neural TTS (100x faster than XTTS, no voice cloning)
]

test = [
    "pytest>=8.4.1",
]

[project.scripts]
aico = "cli.aico_main:app"

[tool.setuptools]
packages = ["aico", "cli", "backend", "modelservice"]

[tool.setuptools.package-dir]
aico = "shared/aico"
cli = "cli"
backend = "backend"

[tool.uv]
# Override transformers requirement from coqui-tts to allow 4.50.3
# Coqui-tts dev branch declares transformers>=4.52.1 but works fine with 4.50.3
override-dependencies = [
    "transformers==4.50.3",
]

[tool.uv.sources]
# Specify git source for coqui-tts
coqui-tts = { git = "https://github.com/idiap/coqui-ai-TTS.git", branch = "dev" }

[dependency-groups]
test = [
    "pytest-asyncio>=1.1.0",
]
