[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aico-cli"
version = "0.5.0"
description = "AICO CLI - Modular system management and versioning"
requires-python = ">=3.9"

# All dependencies for PyPI distribution (CLI + bundled shared)
dependencies = [
    # CLI-specific dependencies
    "typer>=0.12.3,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "psutil>=6.1.0",
    # Shared dependencies (bundled from ../shared/)
    "cryptography",
    "keyring",
    "libsql==0.1.8",
    "pyyaml",
    "jsonschema",
    "watchdog",
    "pyzmq",
    "platformdirs",
    "protobuf>=6.32.0,<7.0.0",
    "passlib[bcrypt]",
    "bcrypt>=3.2.0,<4.0.0",
]

# Development dependencies (shared library as editable install)
[project.optional-dependencies]
dev = [
    "aico-shared",
]

[tool.uv.sources]
aico-shared = { path = "../shared", editable = true }

# This is the key part - defines the CLI entry point
[project.scripts]
aico = "aico_main:app"

# Package configuration - include CLI module and commands/utils
[tool.setuptools]
py-modules = ["aico_main"]
packages = ["commands", "utils"]
