[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aico-shared"
version = "0.3.0"
description = "AICO shared library - Core functionality for CLI and backend"
requires-python = ">=3.9"
dependencies = [
    # Core encryption and security
    "cryptography",
    "keyring",
    
    # Database libraries
    "libsql-client>=0.3.1",
    # Note: duckdb and rocksdb can be added when actually needed
    # sqlcipher3 removed - not used, libsql handles encryption via PRAGMA
    
    # Configuration management
    "pyyaml",
    "jsonschema",
    "watchdog",
    
    # Message bus and communication
    "pyzmq>=25.0.0",
    "protobuf>=5.29.5",
    
    # Cross-platform utilities
    "platformdirs",
    "psutil",
    
    # User authentication (used by UserService)
    "passlib[bcrypt]",
]

[tool.setuptools]
packages = ["aico"]

[tool.setuptools.package-dir]
"" = "."
